# backend-canaan-inmobiliaria

./: .env  .gitignore  Dockerfile  Procfile  main.py  package.json  pnpm-lock.yaml  pyproject.toml  replacements.txt  requirements.txt
apps/consultorias/: apps.py  forms.py  models.py  urls.py  views.py
apps/contabilidad/: admin.py  models.py
apps/cuotas/: admin.py  apps.py  models.py
apps/departamentos/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/importaciones/: apps.py  forms.py  models.py  urls.py  views.py
apps/mensajes/: admin.py  models.py  serializers.py  urls.py  views.py
apps/pagos/: admin.py  models.py
apps/perfiles/: admin.py  models.py  urls.py  views.py
apps/procesos/: admin.py  forms.py  models.py  urls.py  views.py
apps/redcors/: apps.py  forms.py  models.py  urls.py  views.py
apps/reportes/: views.py
apps/servicios/: forms.py  models.py  urls.py  views.py
apps/tramites/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/urbanizaciones/: admin.py  apps.py  models.py  serializers.py
apps/usuarios/: admin.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/ventas/: admin.py  forms.py  models.py  urls.py  views.py
apps/viviendas/: admin.py  models.py  serializers.py
apps/web/: urls.py  views.py
config/: admin.py  settings.py  urls.py
static/src/: admin.css  input.css  output.css
templates/: _base.html  login.html
templates/admin/: _base.html
templates/componentes/: banner.html  form_login.html
utils/: logs.py
(+209 files in other folders)
