[project]
name = "sis-canaan-inmobiliaria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.57",
    "dj-database-url>=3.0.1",
    "django>=5.2.7",
    "django-admin-material-dashboard",
    "django-allauth>=65.12.1",
    "django-compressor>=4.5.1",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "docling>=2.58.0",
    "easyocr>=1.7.2",
    "gradio-client>=1.13.3",
    "gunicorn>=23.0.0",
    "ocrmypdf>=16.11.1",
    "onnxruntime>=1.23.1",
    "opencv-python-headless>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.11",
    "pymupdf4llm>=0.0.27",
    "pypdfium2>=4.30.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "rapidocr>=3.4.2",
    "requests>=2.32.5",
    "social-auth-app-django>=5.6.0",
    "uvicorn>=0.38.0",
    "whitenoise>=6.11.0",
]

[tool.uv.sources]
django-admin-material-dashboard = { git = "https://github.com/app-generator/django-admin-material-dashboard.git" }
